# react-ambient-synth

./: .gitignore  HOW-TO-USE.md  index.html  package-lock.json  package.json  plan.md  tailwind.config.js  verify-setup.ps1  vite.config.ts
.github/workflows/: wasm-bench.yml
.windsurf/rules/: windsurf-project-rules.md
0-debugging/: node-audit-findings.md
long-term-plan/: Chatlog-from-current-application-development-progress.md  new-plan.md  project-thus-far-with-user-feedback.md
long-term-plan/investigation/: 00-canvas-issue-overview.md  01-app-layer-structure.md  02-node-editor-layout.md  03-dom-structure-analysis.md  04-root-cause-and-fix.md
long-term-plan/step-by-step-phases/: 1-Project-Overview.md  1-The-Schism.md  10-The-Polish.md  2-The-Tactile-Graph.md  3-Neon-Organic-UI.md  4-Deep-Synthesis.md  5-Rhythmic-Intelligence.md  6-The-Nervous-System.md  7-Spatial-Audio.md  8-The-Library.md  9-The-Stage.md
public/: manifest.json
public/samples/: README.md  catalog.json
src/: App.css  App.tsx  index.css  main.tsx
src/audio/: types.ts
src/audio/wasm/: Cargo.toml  README.md  WasmLoader.ts  build.ps1
src/audio/wasm/.cargo/: config.toml
src/audio/wasm/benches/: dsp_benchmarks.rs
src/audio/wasm/src/: convolution.rs  delay.rs  envelopes.rs  filters.rs  granular.rs  lib.rs  memory.rs  oscillators.rs  simd_utils.rs  spectral.rs  utils.rs
src/audio/wasm/tests/: browser-benchmark.html  memory-profile.js
src/components/: ControlPanel.tsx  KeyboardShortcutsModal.tsx  PresetBrowser.tsx  XYPad.tsx
src/hooks/: index.ts  useAccessibility.ts  useAudioMeter.ts  (+5 more)
(+122 files in other folders)
